--- a/app/src/main/res/layout/music_notification.xml
+++ b/app/src/main/res/layout/music_notification.xml
@@ -7,6 +7,7 @@
     android:background="@color/colorPrimary">
 
     <LinearLayout
+       android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -15,6 +16,7 @@
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:background="@mipmap/ic_launcher"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,7 +48,6 @@
                     android:divider="@drawable/divider"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:layout_marginTop="10dp"
                     android:showDividers="middle">
 
                     <Button
